--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 	<title>test git</title>
 	<meta charset="utf-8">
 </head>
+<style type="text/css">
+	h1 {
+		position: absolute;
+		top : 40%;
+		width : 100%;
+		text-align: center;
+		font-family: sans-serif;
+		font-size: 100;
+	}
+
+</style>
 <body>
 	<h1>Hi</h1>
 </body>
